05-cilium/nats-demo/k8s/subscriber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-demo-subscriber-deploy
  labels:
    app: nats-demo-subscriber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-demo-subscriber
  template:
    metadata:
      labels:
        app: nats-demo-subscriber
        accessLevel: high
    spec:
      containers:
      - name: nats-demo-subscriber
        image: "dueruen/learning-kubernetes:nats-demo-arm"
        imagePullPolicy: "Always"
        ports:
          - name: http
            containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1             
---
apiVersion: v1
kind: Service
metadata:
  name: nats-demo-subscriber-service
  labels:
    app: nats-demo-subscriber
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      
  selector:
    app: nats-demo-subscriber
