05-cilium/nats-demo/k8s/l7-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule1"
spec:
  description: "L7 policy to restrict access to specific HTTP call"
  endpointSelector:
    matchLabels:
      accessLevel: high
      app: nats-demo-producer
  ingress:
  - fromEndpoints:
    - matchLabels:
        accessLevel: high
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/"
